--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,6 @@
 body { 
     
-    background-color: #34495e; 
+    background-color: #fff; 
     font-family: sans-serif; 
     color:#666; 
 }
@@ -12,10 +12,11 @@ h1, h2 {
 #cavas{
     width: 1000;
     height: 600;
-    position: fixed;
+   
 }
 #wheel {
-    position: fixed;
+    z-index: 999;
+    
     margin-left: 28%; 
     margin-top: -13%;
 }
@@ -52,7 +53,7 @@ h1, h2 {
 }
 
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 800px){
 
     #textname{
         margin-top: 105%;
@@ -65,8 +66,83 @@ h1, h2 {
 
     #wheel {
         position: block;
-        margin-left: -32%; 
-        margin-top: -130%;
+        margin-left: -10%; 
+        margin-top: -20%;
     }
     
 }
+
+nav {
+height: 9vh;
+background: #167DF0;
+color: #fff;
+display: flex;
+justify-content: space-between;
+}
+nav .mainMenu {
+display: flex;
+list-style: none;
+}
+nav .mainMenu li a {
+display: inline-block;
+padding: 10px;
+text-decoration: none;
+text-transform: uppercase;
+color: #fff;
+font-size: 1.5rem;
+}
+nav .mainMenu li a:hover {
+background: rgb(255,94,0);
+}
+nav .openMenu {
+font-size: 1rem;
+margin: 20px;
+display: none;
+cursor: pointer;
+}
+nav .mainMenu .closeMenu , .icons i {
+font-size: 2rem;
+display: none;
+cursor: pointer;
+}
+
+
+nav .logo h5{
+    margin-top: 10px;
+    font-size: 25px;
+}
+nav .logo {
+margin-top: 7px;
+margin-left: 15px;
+font-size: 0px;
+cursor: pointer;
+}
+@media(max-width: 800px){
+nav .mainMenu {
+    height: 10vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    transition: top 1s ease;
+    display: none;
+}
+nav .mainMenu .closeMenu {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+
+}
+nav .openMenu {
+    display: block;
+}
+
+
+}
+
