--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -54,6 +54,7 @@ h1, h2 {
 @media screen and (max-width: 800px){
 
     #textname{
+        z-index: 999999;
         margin-top: 125%;
         margin-left: 28%;
     }
