--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,7 +14,7 @@ h1, h2 {
     height: 600;
 }
 #wheel {
-    position: fixed;
+    position: relative;
     margin-left: 28%; 
     margin-top: -13%;
 }
@@ -115,7 +115,8 @@ nav .logo {
     }
    
     nav .openMenu {
-        margin-right: 5px;
+        margin-top: 15px;
+        margin-right: 15px;
         display: block;
     }
     
