--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,6 +22,28 @@ h1, h2 {
     margin-left: 10%;
 }
 
+hr{
+    width: 67%;
+    margin-top: 1.5%;
+    margin-left: 19%;
+    background-color: black; height: 1px; border: 0;
+}
+#ent, #res{
+    color: #000;
+    margin-top: -10px;
+
+}
+
+#ent{
+    border: 1px solid black;
+    border-bottom: none;
+}
+#textname a{
+    margin: auto;
+    padding: 10px;
+   
+}
+
 .vertical-alignment-helper {
     display:table;
     height: 100%;
